src/index.css
.pitch-tool-toggle {
  padding: 5px 10px;
  background-color: #eee;
  border: 1px solid #333;
  border-radius: 7px;
  cursor: pointer;
}

.pitch-tool-toggle svg {
  height: 40px;
  width: 40px;
  fill: #333;
}

.pitch-tool-toggle.open {
  background-color: #333;
}

.pitch-tool-toggle.open svg {
  fill: #eee;
}

.pitch-tool {
  width: 100%;
  height: 100%;
  border: 1px solid #333;
  font-family: Roboto, Sans-Serif;
  z-index: 100;
}

.pitch-tool .control-box {
  display: flex;
  flex-direction: column;
  justify-content: center;
  background-color: #ddd;
  border-bottom: 1px solid #333;
  width: 100%;
  height: 30%;
}

.pitch-tool .controls {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  color: #333;
  font-size: 18px;
}

.pitch-tool.above-600 .controls {
  font-size: 24px;
}

.pitch-tool.above-800 .controls {
  font-size: 30px;
}

.pitch-tool.above-1000 .controls {
  font-size: 36px;
}

.pitch-tool.above-1200 .controls {
  font-size: 42px;
}

.pitch-tool.above-1400 .controls {
  font-size: 48px;
}

.pitch-tool.above-1600 .controls {
  font-size: 54px;
}

.pitch-tool.above-1800 .controls {
  font-size: 60px;
}

.pitch-tool .controls-octave,
.pitch-tool .controls-instrument {
  align-self: center;
}

.pitch-tool .controls-instrument {
  display: flex;
  flex-direction: row;
}

.pitch-tool .current-octave,
.pitch-tool .control-label {
  cursor: default;
}

.pitch-tool .control-label {
  color: #666;
}

.pitch-tool .octave-shifter {
  font-weight: bold;
  font-size: 1.33em;
  margin-left: calc(1.33em / 5);
  margin-right: calc(1.33em / 5);
  line-height: 0;
}

.pitch-tool .octave-shifter:not(.exhausted) {
  cursor: pointer;
}

.pitch-tool .octave-shifter:active:not(.exhausted) {
  color: #3a7a94;
}

.pitch-tool .octave-shifter.exhausted {
  color: #aaa;
}

.pitch-tool .instrument-selector {
  display: flex;
  font-size: 1.22em;
  height: 1.22em;
  margin-left: calc(1.22em / 8);
  margin-right: calc(1.22em / 8);
  cursor: pointer;
}

.pitch-tool.above-600 .instrument-selector,
.pitch-tool.above-800 .instrument-selector,
.pitch-tool.above-1000 .instrument-selector,
.pitch-tool.above-1200 .instrument-selector,
.pitch-tool.above-1400 .instrument-selector,
.pitch-tool.above-1600 .instrument-selector,
.pitch-tool.above-1800 .instrument-selector {
  padding: calc(1.22em / 8) calc(1.22em / 4);
  border: 1px solid #aaa;
  border-radius: calc(1.22em / 6);
}

.pitch-tool .instrument-selector svg {
  height: 100%;
  fill: #333;
}

.pitch-tool .instrument-selector.selected svg {
  fill: #3a7a94;
}

.pitch-tool .keys {
  display: flex;
  flex-direction: row;
  width: 100%;
  height: 70%;
  position: relative;
}

.pitch-tool .white-key,
.pitch-tool .black-key {
  position: relative;
  border: 1px outset;
}

.pitch-tool .white-key {
  background-color: #fff;
  width: 100%;
  height: 100%;
}

.pitch-tool .white-key.pressed {
  background-color: #eee;
}

.pitch-tool .black-key {
  background: linear-gradient(#222, #888);
  color: #fff;
  width: calc(60% / 15);
  height: 60%;
  z-index: 101;
  position: absolute;
  margin-left: calc(-30% / 15);
}

.pitch-tool .black-key.pressed {
  background: linear-gradient(#888, #222);
}

.pitch-tool .key-name {
  position: absolute;
  bottom: 2%;
  left: 0;
  right: 0;
  text-align: center;
  color: #aaa;
  cursor: default;
  font-size: 18px;
}

.pitch-tool.selection-disabled {
  -webkit-touch-callout: none;
  user-select: none;
}

